# learning-ai

./: shell.nix
karpathy-series/: .gitignore  .tmux.sh  README.md  pyproject.toml  shell.nix
karpathy-series/1-micrograd/: Makefile  README.md  exercise.ipynb  graph_demo.ipynb  micrograd_examples.ipynb  mypy.ini
karpathy-series/1-micrograd/micrograd/: assignment.py  calculation.py  drawing.py  graph.py  ident.py  perceptron.py  value.py  value_type.py
karpathy-series/1-micrograd/tests/: test_assignment.py  test_calculation.py  test_graph.py  test_ident.py  test_value.py  test_value_data.py
karpathy-series/gpt-from-scratch/gpt_from_scratch/: __main__.py  data.py  encoding.py
karpathy-series/gpt-from-scratch/tests/unit/: test_encoding.py
karpathy-series/karpathy_series/makemore/: bigrams.py  data.py  util.py
karpathy-series/karpathy_series/makemore/components/: generation.py  recorder.py  typing.py
karpathy-series/karpathy_series/makemore/components/function/: loss.py
karpathy-series/karpathy_series/makemore/components/models/: frequentist.py  linear.py  mlp.py  mlp_flat.py  model.py  perceptron.py
karpathy-series/karpathy_series/makemore/components/networks/: blocks.py  frequentist.py  linear.py  mlp.py  mlp_flat.py  perceptron.py  wavenet.py
karpathy-series/karpathy_series/makemore/components/neuro/: batch_norm.py  component.py  embedding.py  expand.py  flatten.py  functional.py  linear.py  sequence.py  slide.py
karpathy-series/karpathy_series/makemore/encoding/: abstract.py  character.py  word_encoding.py
karpathy-series/karpathy_series/makemore/models/: embedding.py  frequentist.py  generation.py  linear.py  mlp.py  mpl_flat.py  net.py  perceptron.py  recorder.py  sequential.py  training.py
karpathy-series/karpathy_series/makemore/models/components/: batch_norm.py  component.py  embedding.py  expand.py  flatten.py  functional.py  linear.py  sequence.py
karpathy-series/karpathy_series/makemore/training/: data.py  learning.py
karpathy-series/karpathy_series/micrograd/: assignment.py  calculation.py  drawing.py  graph.py  ident.py  perceptron.py  valuation.py  value.py  value_type.py
karpathy-series/notebooks/makemore/: exercise.ipynb  frequency_model.ipynb  manual_backprop_lab.ipynb  mpl_component_model.ipynb  mpl_model.ipynb  network_bigram_model.ipynb  network_context_model.ipynb  network_trigram_model.ipynb  wavenet_lab.ipynb  wavenet_model.ipynb
karpathy-series/notebooks/micrograd/: exercise.ipynb  graph_demo.ipynb  micrograd_examples.ipynb
karpathy-series/tests/gpt_from_scratch/unit/: test_encoding.py
karpathy-series/tests/makemore/unit/: test_bigrams.py  test_embedding.py  test_encoding.py  test_generation.py  test_training_data.py  test_util.py
karpathy-series/tests/makemore/unit/components/: test_bach_norm.py  test_expand.py  test_flatten.py  test_linear.py  test_slide.py  test_typing.py
karpathy-series/tests/micrograd/unit/: test_assignment.py  test_calculation.py  test_graph.py  test_ident.py  test_value.py
karpathy-series/typings/graphviz/: __init__.pyi  graphs.pyi
