[tool.poetry]
name = "yvan-vivid-karpathy-series"
version = "0.1.0"
description = "Yvan Vivid's exploration of the Karpathy AI series"
authors = ["yvan-vivid <yvan.vivid@gmail.com>"]
readme = "README.md"
packages = [{include = "yvan_vivid_karpathy_series"}]

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
mypy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.13.2"
jupyterlab = "^3"
jupyterlab-vim = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
