[tool.poetry]
name = "karpathy-series"
version = "0.1.0"
description = "Yvan Vivid's exploration of the Karpathy AI series"
authors = ["yvan-vivid <yvan.vivid@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"
torch = { version = "^2.5.1", source = "pytorch" }
torchvision = { version = "^0.20", source = "pytorch" }
mypy = "^1.14.1"
numpy = "^2.2.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
ipython = "^8.26.0"
pytest = "^8.3.2"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
jupyterlab-vim = "^4.1.3"
basedpyright = "^1.23.2"
jupyterlab-code-formatter = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = ["graphviz"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch"]
# ignore_missing_imports = true
implicit_reexport = true


[tool.basedpyright]
deprecateTypingAliases = false
enableTypeIgnoreComments = true
reportIgnoreCommentWithoutRule = false
# ktypeCheckingMode ["off", "basic", "standard", "strict", "recommended", "all"] 

[tool.poe.tasks]
type-check = "mypy karpathy_series tests"
pyright-pass = "basedpyright"
test = "pytest tests"
lint = "ruff check"
check = ["type-check", "pyright-pass", "test", "lint"]

imports = "ruff check --select I --fix"
format_files = "ruff format"
format = ["imports", "format_files"]

fix = "ruff check --fix"

edit = "nvim"
repl = "ipython"
notebooks = "jupyter lab"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = []
